# beetle_collatz

./: Cargo.toml
collatz-bounciest-num/: Cargo.toml
collatz-bouncy-seq/: Cargo.toml
collatz-crunch/: Cargo.toml
src/: bouncy_numbers.rs  check_range.rs  decrease_steps.rs  fall.rs  lib.rs  rules.rs  steps.rs  steps_range.rs  traits.rs
