[package]
name = "beetle-collatz"
version = "0.5.9"
edition = "2021"
authors = ["beetle"]
description = "A collection of functions relating to the Collatz conjecture"
license = "MIT"
repository = "https://github.com/Mearkatz/beetle_collatz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beetle-nonzero = "0.3.2"
num = "0.4.0"

[features]
default = []

