[package]
name = "beetle-collatz"
version = "0.5.10"
edition = "2021"
authors = ["beetle"]
description = "A collection of functions relating to the Collatz conjecture"
license = "MIT"
repository = "https://github.com/Mearkatz/beetle_collatz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beetle-nonzero = "0.3.3"
num = "0.4.1"

[features]
default = []

